# python-boilerplate

{{cookiecutter.hyphenated}}/: README.md  pyproject.toml  run.sh
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/: __main__.py
